# ist-project-railway

./: .gitignore  Procfile  build.sh  build_worker.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
authentication/: forms.py  urls.py  views.py
dashboard/: __init__.py  bokeh_utils.py  consumers.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_project_created_date.py  0003_dataobject_widget_type_alter_project_created_date.py  0004_alter_dataobject_widget_type_and_more.py
dashboard/mongodb/: __init__.py  db_utils.py
dashboard/mqtt/: __init__.py  client.py  consumers.py
detail/: project.html  topic.html
ist_project/: asgi.py  settings.py  urls.py  wsgi.py
static/dashboard/css/: dashboard.css
static/dashboard/scripts/: alerts.js  dashboard.js  show_modal.js
templates/authentication/: base.html  login.html  signup.html
templates/dashboard/: base.html
templates/dashboard/detail/: dataobject.html  project.html  topic.html
templates/dashboard/detail/include/: project_content.html  topic_content.html
templates/dashboard/index/: index.html
templates/dashboard/index/include/: index_content.html
templates/dashboard/modals/: edit_dataobject.html  new_dataobject.html  new_project.html  new_topic.html
templates/dashboard/nav/: nav.html
templates/dashboard/partials/: card_btns.html  data_values_container.html  dataobject_form.html
templates/dashboard/partials/ajax/: dataobject_values.html  dataobjects.html  project_connected.html  (+1 more)
widget_dashboard/: apps.py
