[tool.poetry]
name = "ist-project"
version = "0.1.0"
description = ""
authors = ["theMossCode <collombuvi@gmail.com>"]
readme = "README.md"
packages = [{include = "ist_project"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
daphne = "^4.0.0"
django-channels = "^0.7.0"
django-guardian = "^2.4.0"
channels-redis = "^4.0.0"
pymongo = "^4.3.3"
bokeh = "^3.0.3"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
